2007-08-10  Jonathan Pobst  <monkey@jpobst.com>

	* ToolTip.cs: If the control's handle hasn't been created when it has a
	tooltip set on it, don't check to see if we need to show the tooltip.  This
	check was causing the control's handle to be created.
	[Fixes bug #82399]

2007-08-10  Jonathan Pobst  <monkey@jpobst.com>

	* TextBoxBase.cs: Fix SelectionLength when no text selected to match MS:
					1.1		2.0
	Handle Not Created	-1		0
	Handle Created		0		0
	[Fixes bug #82371]

2007-08-10  Jonathan Pobst  <monkey@jpobst.com>

	* ToolTip.cs: Hide the tooltip if the control is clicked to match MS behavior.
	[Fixes bug #82348]

2007-08-09  Jonathan Pobst  <monkey@jpobst.com>

	* DrawToolTipEventArgs.cs: Don't dispose a brush we got from the respool.
	* ToolTip.cs: Implement some properties and owner draw.

2007-08-09  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* DataGridView.cs: OnPaint: don't set scrollbar visibility to false then
	  show them again, since setting visibility causes a paint, causing an
	  endless loop (instead use a temporary and set it all when it's known if
	  they should be shown or not). Fixes #79265.

2007-08-09  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* DataGridView.cs: Only do a full column/row selection if a header was
	  clicked and we're in Column/RowHeader selection mode. If shift and ctrl
	  isn't pressed, deselect everything before selecting something.

2007-08-09  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* DataGridView.cs: Fix SelectedRows and SelectedColumns to match MS
	  behaviour according to bug #81075 - they are returned in the order they
	  are selected. Fix HitTest to check if the point is within any of the
	  headers. Allow for row/column selection when in ColumnHeader or
	  RowHeader selection mode. Add SetSelected[Column|Row]CoreInternal for
	  the row and column to call when their selected state changes, and
	  updated selected_[rows|columns] whenever SetSelected* is called.